<resources>
    <string name="app_name">Orgs</string>
    <string name="cesta_de_frutas">Cesta de Frutas</string>
    <string name="formulario_produto_nome_hint">Nome</string>
    <string name="formulario_produto_descricao_hint">Descrição</string>
    <string name="formulario_produto_valor_hint">Valor</string>
    <string name="formulario_produto_valor_text">Salvar</string>
    <string name="formulario_produto_imagem_description">Imagem do produto</string>
    <string name="formulario_imagem_botao_carregar">Carregar</string>
    <string name="formulario_imagem_imageview_description">Imagem padrão</string>
    <string name="formulario_imagem_edittext_hint">URL da imagem</string>
    <string name="lorem_ipsum_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="lorem_ipsum_title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="criar_produto">Criar Novo Produto</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_usuario">Cadastrar Usuário</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="activity_perfil_usuario_title">Perfil</string>
    <string name="menu_lista_produtos_perfil_usuario">Perfil do Usuário</string>
    <string name="sem_usuario">Sem usuário</string>
</resources>