<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioProdutoActivity">

        <ImageView
            android:id="@+id/formulario_produto_imagem"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/formulario_produto_imagem_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/formulario_produto_imagem"
            app:srcCompat="@drawable/imagem_padrao" />

        <AutoCompleteTextView
            android:id="@+id/formulario_produto_usuario_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:hint="@string/sem_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_produto_imagem"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_produto_textlayout_nome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_produto_usuario_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formulario_produto_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_produto_nome_hint"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_produto_textlayout_descricao"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/formulario_produto_textlayout_nome"
            app:layout_constraintStart_toStartOf="@id/formulario_produto_textlayout_nome"
            app:layout_constraintTop_toBottomOf="@id/formulario_produto_textlayout_nome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formulario_produto_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_produto_descricao_hint"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_produto_textlayout_valor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/formulario_produto_textlayout_nome"
            app:layout_constraintStart_toStartOf="@id/formulario_produto_textlayout_nome"
            app:layout_constraintTop_toBottomOf="@id/formulario_produto_textlayout_descricao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formulario_produto_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_produto_valor_hint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/formulario_produto_botao_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/formulario_produto_valor_text"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formulario_produto_textlayout_valor"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

