<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/formulario_imagem_imageview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/formulario_imagem_imageview_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imagem_padrao" />

        <Button
            android:id="@+id/formulario_imagem_botao_carregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_imagem_botao_carregar"
            app:icon="@drawable/ic_action_refresh"
            app:layout_constraintBottom_toBottomOf="@id/formulario_imagem_imageview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_imagem_imageview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_imagem_textinputlayout_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/formulario_imagem_botao_carregar" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formulario_imagem_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:hint="@string/formulario_imagem_edittext_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>